--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wordpressify",
-	"version": "0.2.8-3",
+	"version": "0.2.8-2",
 	"description": "A build system designed to automate your WordPress development workflow.",
 	"keywords": [
 		"babel",
@@ -37,11 +37,33 @@
 	"author": "Luan Gjokaj <luan@riangle.com>",
 	"license": "MIT",
 	"dependencies": {
-		"chalk": "^3.0.0",
-		"commander": "^4.0.1",
-		"download": "^7.1.0",
-		"execa": "^4.0.0",
-		"ora": "^4.0.3",
-		"prompts": "^2.3.0"
+		"@babel/core": "^7.7.2",
+		"@babel/preset-env": "^7.7.1",
+		"@wordpress/eslint-plugin": "^3.1.0",
+		"aos": "^2.3.4",
+		"beeper": "^2.0.0",
+		"browser-sync": "^2.26.7",
+		"cherry-grid": "0.1.8",
+		"cssnano": "^4.1.10",
+		"del": "^5.1.0",
+		"eslint": "^6.6.0",
+		"fancy-log": "^1.3.3",
+		"gulp": "^4.0.2",
+		"gulp-babel": "^8.0.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-connect-php": "^1.0.3",
+		"gulp-imagemin": "^6.1.1",
+		"gulp-inject-string": "^1.1.2",
+		"gulp-plumber": "^1.2.1",
+		"gulp-postcss": "^8.0.0",
+		"gulp-remote-src": "^0.4.4",
+		"gulp-sourcemaps": "^2.6.5",
+		"gulp-uglify": "^3.0.2",
+		"gulp-vinyl-zip": "^2.1.3",
+		"jquery": "^3.4.1",
+		"postcss-easy-import": "^3.0.0",
+		"postcss-mixins": "^6.2.3",
+		"postcss-preset-env": "^6.7.0",
+		"stylelint": "^11.1.1"
 	}
 }
